typescript/checker/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            322,
        ),
        hi: BytePos(
            325,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:20:5
   |
20 | var fn1: fn1;
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            433,
        ),
        hi: BytePos(
            434,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:24:5
   |
24 | var s: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            720,
        ),
        hi: BytePos(
            723,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:34:5
   |
34 | var fn2: fn2;
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            775,
        ),
        hi: BytePos(
            776,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:37:5
   |
37 | var d: Date;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1450,
        ),
        hi: BytePos(
            1453,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:54:5
   |
54 | var fn3: fn3;
   |     ^^^

error: unimplemented
expand_export_info(U)
File: $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:57:9
   |
57 | var s = new fn3('', 3, '');
   |         ^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(U)
File: $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:58:9
   |
58 | var n = new fn3(5, 5, 5);
   |         ^^^^^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1544,
        ),
        hi: BytePos(
            1545,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:59:5
   |
59 | var n: number;
   |     ^

error: unimplemented
expand_export_info(U)
File: $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:63:9
   |
63 | var s = new fn3<string, string>('', '', '');
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(U)
File: $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:64:9
   |
64 | var n = new fn3<number, string, string>('', '', 3);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            2199,
        ),
        hi: BytePos(
            2202,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:74:5
   |
74 | var fn4: fn4;
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            3085,
        ),
        hi: BytePos(
            3088,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/overloadResolutionConstructors.ts:99:5
   |
99 | var fn5: fn5;
   |     ^^^

